tests/ui/multiple-proof-attributes/expected
error: Only one Proof Attribute allowed
  --> main.rs:14:1
   |
14 | #[kani::proof]
   | ^^^^^^^^^^^^^^
